Don't crash when creating a new flipbook

The crash would happen when creating a new flipbook while there was
no current flipbook open, but only if there was an open image.

BUG:312643